--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -17,8 +17,9 @@ spring:
   jpa:
     properties:
       hibernate:
-        # 실행되는 쿼리를 콘솔에 출력
+        # 실행되는 쿼리 콘솔 출력
         show_sql: true
+        # 콘솔 창에 출력되는 쿼리를 가독성 좋게 포매팅
         format_sql: true
         use_sql_comments: true
         dialect: org.hibernate.dialect.OracleDialect
@@ -32,9 +33,8 @@ spring:
       maxRequestSize: 40MB
 
   # 정적 자원 설정(CSS, JS, 이미지)
-  web:
-    resources:
-      staticLocations: file:src/main/resources/static/
+  resources:
+    staticLocations: file:src/main/resources/static/
 
   # 라이브 리로드 설정
   devtools:
